finished filter component & fixed display on smaller screens

--- a/src/components/events_elements/event_elements/EventsList.module.css
+++ b/src/components/events_elements/event_elements/EventsList.module.css
@@ -2,7 +2,7 @@
     display: flex;
     z-index: 0;
     width: 100vw;
-    height: 100vh;
+    /* height: 100vh; */
     align-items: flex-start;
 }
 
@@ -19,6 +19,7 @@
 @media (max-width: 768px) {
  .list {
     flex-direction: column;
+    gap: 30px;
 }
 
 .events-list {
@@ -27,5 +28,6 @@
     justify-content: center;
     align-items: center;
     width: 100vw;
+    flex: none;
 }
 }
