--- a/src/components/utility_components/Filter.module.css
+++ b/src/components/utility_components/Filter.module.css
@@ -6,6 +6,14 @@
   background-color: #fff;
 }
 
+.filter-header > button {
+  border-radius: 4px;
+  padding: 2px;
+  border: none;
+  background: none;
+  color: rgb(201, 182, 12);
+}
+
 .filter-category {
   width: 120px;
 }
@@ -15,6 +23,7 @@
   flex: 0 0 30%;
   align-items: center;
   justify-content: center;
+  height: auto;
 }
 
 .filter-item {
@@ -54,10 +63,8 @@
 
 @media (max-width: 768px) {
   .filter-container {
-    
     flex-direction: row;
     width: auto;
-   
   }
 
   .filter-area {
@@ -68,6 +75,7 @@
 
   .filter-component {
     width: 100%;
-    height: fit-content;
+    /* height: 100px; */
+    flex: none;
   }
 }
